--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Level.Level
-EditorStartupMap=/Game/Maps/Level.Level
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BP_GameModeBaseTest.BP_GameModeBaseTest_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
