IA que corre y ataca

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=00E26B344CE724981677FFAFC4D39729
+
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawnsAsSources=false
