--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,10 +10,10 @@ bAutoRegisterAllPawnsAsSources=false
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
+BuildConfiguration=PPBC_Development
 BuildTarget=
 FullRebuild=True
-ForDistribution=True
+ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
